# microDX21

./: .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  build-mac.sh  build.sh
.github/workflows/: addsubmodule.yml  build.yml
config/: README-INTEGRATION.md  config.txt  microdx21.ini  velvetkeys.ini
doc/images/: microdx21_stack_exploded.body.txt  microdx21_stack_exploded.html  microdx21_stack_exploded.prompt.md  render_stack.sh
libs/libdisplay2/: Makefile  cst816dtouch.cpp  cst816dtouch.h  epd2in13v4display.cpp  epd2in13v4display.h  gt1151touch.cpp  gt1151touch.h  sh1106device.cpp  sh1106device.h  sh1106display.cpp  sh1106display.h  sh1106spidisplay.cpp  sh1106spidisplay.h  ssd1305display.cpp  ssd1305display.h  ssd1305spidisplay.cpp  ssd1305spidisplay.h  ssd1306spidisplay.cpp  ssd1306spidisplay.h
pico-midi-adapter/: .gitignore  CMakeLists.txt  README
pico-midi-adapter/src/: main.c  tusb_config.h  usb_descriptors.c  ws2812.pio.h
scripts/: build_manual.py  prepare_sd_skeleton.sh
src/: Makefile  Rules.mk  Synth_OPM.mk  circle_stdlib_vk.h  display.mk  kernel.cpp  kernel.h  kernel8.map  lv_conf.h  main.cpp  microdx21.cpp  microdx21.h  sensor.mk  velvetkeys.cpp  velvetkeys.h
src/audio/: microdx21_i2s.cpp  microdx21_i2s.h  microdx21_multicore.cpp  microdx21_multicore.h  microdx21_pwm.cpp  microdx21_pwm.h  microdx21_usb.cpp  microdx21_usb.h  opmemuadapter.h  velvetkeys_i2s.cpp  velvetkeys_i2s.h  velvetkeys_multicore.cpp  velvetkeys_multicore.h  velvetkeys_pwm.cpp  velvetkeys_pwm.h  velvetkeys_usb.cpp  velvetkeys_usb.h
src/display/: display_dx21.cpp  display_dx21.h  displayconfig.h  dx21_input.cpp  dx21_input.h
src/gui/: display_registry.cpp  display_registry.h  displayconfig.h  displaymanager.cpp  displaymanager.h  encoder.cpp  encoder.h  guicontroller.cpp  guicontroller.h  guilayout.h  guiscreenbase.h  lv_font_icons.cpp  lv_font_icons.h  lv_font_seg7.cpp  lv_font_seg7.h  screen_parameter.cpp  screen_parameter.h  screen_presetbrowser.cpp  screen_presetbrowser.h  screen_splash.cpp  screen_splash.h  style_mono.cpp  style_mono.h  ui_img_velvetkeys128x64_png.cpp  ui_img_velvetkeys128x64_png.h  ui_types.h  ui_widget_factory.h  ui_widget_factory_mono.cpp  ui_widgets.h  ui_widgets_mono.cpp  ui_widgets_mono.h
src/microdx21/: velocitycurve.h
src/midi/: microdx21_mididevice.cpp  microdx21_mididevice.h  microdx21_pckeyboard.cpp  microdx21_pckeyboard.h  microdx21_serialmididevice.cpp  microdx21_serialmididevice.h  microdx21_usbmididevice.cpp  microdx21_usbmididevice.h  velvet_mididevice.cpp  velvet_mididevice.h  velvet_pckeyboard.cpp  velvet_pckeyboard.h  velvet_serialmididevice.cpp  velvet_serialmididevice.h  velvet_usbmididevice.cpp  velvet_usbmididevice.h
src/opm/: CMakeLists.txt  dx21_ui_7seg.h  dx21_ui_strings.h  opm.c  opm.h  opmemu.cpp  opmemu.h  patches.h
src/opm/firmware/: dx21_rom_v1_5.asm
src/opm/io/: fatfs_filesystem.h  ifilesystem.h  std_filesystem.h
src/opm/memory/: dx21_memory.cpp  dx21_memory.h
src/system/: config.cpp  config.h
src/util/: ringbuffer.h
test/: standalone.cpp
tests/: CMakeLists.txt  test_active_sensing.cpp  test_memory_protect.cpp  test_portamento.cpp  test_split_egcopy.cpp  test_sysex_dump.cpp  test_velocity_curve.cpp  test_vmem_roundtrip.cpp  test_voice_stealing.cpp  test_voice_workflow.cpp
tools/: alg_prober.cpp
